<resources>
    <string name="app_name">Recycled PC</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Login strings-->
    <string name="login_title">Recycled PC</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="LOGIN_PREFS">edu.tacoma.uw.recycledpc.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>

    <!--Register strings-->
    <string name="register_email_hint">Register Email</string>
    <string name="first_name_hint">First name</string>
    <string name="register_password_hint">Register Password</string>
    <string name="last_name_hint">Last name</string>
    <string name="register_account">REGISTER ACCOUNT</string>


    >

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course_id_hint">Enter Item Name </string>
    <string name="course_short_desc_hint">Enter Price  </string>
    <string name="course_long_desc_hint">Enter Description</string>
    <string name="course_prereqs_hint">Enter ????</string>
    <string name="add_course_text">Add Item</string>
    <string name="contact_owner">Contact Seller</string>
    <string name="add_wish_item">Add Item</string>
    <string name="add_wish_item_hint">Add Item...</string>


</resources>
